# VersionInfoSample

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VersionInfo.rc  appveyor.yml  main.cpp
cmake/: GenerateVersionRcFile.cmake
cmake/templates/: VersionInfo.rc.in
